# ai-operations-copilot

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
ai_ops_copilot/: __init__.py  cli.py  extractor.py  models.py  pipeline.py  quality.py  review.py  storage.py  webhook.py
automation/: linux_api_examples.md  n8n_workflow_concept.json  webhook_payload_example.json  workflow.md
dashboard/: __init__.py  app.py  data.py
data/examples/: climate_dmd_brief.md  fintech_options_risk.md  medical_wound_launch.md  nlp_hatespeech_azure.md  robotics_drone_agent_workflow.md  semantic_recommender_product.md
docs/: architecture.md  cv_bullets.md  n8n_workflow.json  profile_alignment.md  profile_analysis.md
outputs/: career_proof_summary.json  webhook_payloads.jsonl
sql/: open_risks.sql  overdue_actions.sql  priority_distribution.sql  project_status.sql
tests/: test_dashboard_data.py  test_extraction.py  test_storage_review.py
